objects/Member__c.object
<CustomObject>
    <description>Details of the Members..</description>
    <fields>
        <fullName>Contact_No__c</fullName>
        <description>contact Number of the Member</description>
        <label>Contact No</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Email_Id__c</fullName>
        <description>Email-Id for the Member</description>
        <inlineHelpText>Give the Email Id</inlineHelpText>
        <label>Email Id</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First Name of the Member..</description>
        <inlineHelpText>Give the first name..</inlineHelpText>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last Name of the Member</description>
        <inlineHelpText>Enter the Last Name</inlineHelpText>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Member</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Phone_No_Validation</fullName>
        <active>true</active>
        <description>Rule for Contact No Validation</description>
        <errorConditionFormula>NOT(REGEX(Contact_No__c ,&quot;[+91]{3}-[0-9]{10}&quot;))</errorConditionFormula>
        <errorMessage>Please Enter the Contact No with proper way..</errorMessage>
    </validationRules>
</CustomObject>